--- a/index.html
+++ b/index.html
@@ -3,49 +3,16 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Under the tree :: a film by Demian Tzatzkin</title>
+    <title>Demian Tzatzkin</title>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="underthetree/assets/css/style.min.css">
     <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <svg style="display:none">
-      <defs>
-        <g id="main-image" viewbox="0 0 564.5 282.3">
-          <path fill="#FFF0DE" d="M102.1 112.2l.7 9.2s121.4 4.7 142.5 4.4c21-.3 154.4.3 223.5-1.2s95.5-1.9 95.5-1.9l.1-9.3s-169.1-.9-234.4-1.8c-65.3-.9 0 0 0 0l-227.9.6zM550.2 35.1s-396.4.8-428.4-1.2c-.4 8.3-.3 24-.3 24s348.6 1.1 428.4.1c.6-6.2.3-22.9.3-22.9zM549.9 68.6s-306.6 2.1-431 .4c-1.2 15.1-.3 22.9-.3 22.9s308.4 1.1 430.8.7c.6-10.5.5-24 .5-24zM122.5.4S406.9 4.8 548.6 0c1.4 14.1 1.7 25 1.7 25s-362.1 2.9-428.2-2.2c-.3-8.8.4-22.4.4-22.4zM145.1 126l-2.1 59.2-21.8.4 5-60.1zM518.1 125.8l1.9 59.3 21.8.5-4.8-60.3z">
-          </path>
-          <path fill="#4E4D50" fill-opacity="1" d="M549.9 204H542s-4.6 0-13 .1h-5l17.7-18-20.8-.7-378.9.7-20.8-.7-18.7 19c-15.3-.1-29.1-.2-41-.4l-6.4 18.5h.4l-5.4 4s35.1.2 87.1.5c-.9.5-1.8 1-2.7 1.6-1.6.9-3.2 1.9-4.7 2.9-33.1-.1-62.7-.3-85.6-.6l-15.6 11.5s39.5.1 96.8.2c.6 1.7 1.8 3.3 3.3 4.8-42.1 0-79.6-.2-107.1-.6L0 262.3s42.9-.1 104.3-.3h2c10.7.5 20.4.1 29.8-.3-1.3 2.1-1.6 4.4-.4 7.3 11 20 48.9 12.4 66.7-2.1 2.2-1.9 3.3-3.7 3.9-5.3 27.3-.1 55.5-.2 83.3-.3h5.9c-4.5 20.2 22.6 23 36.2 20.1 1-.2 2-.4 3-.5 5-.5 10-2.5 14-7.5 3-4 9 2 13 0 2-1 5-3 4-6.5v-2.8c0-.7-.1-1.4-.3-2.1l-.3-.9c49.1-.2 93-.4 123.5-.6 19.7-14.6 16-14.5 16-14.5s-34.7.3-86.3.6c4.3-1.3 8.7-2.5 13-3.8 31.3-.1 59-.2 80.4-.3 19.7-14.6 5.1-11.4 5.1-11.4s-23.8.1-61.3.3c.2-1 .2-2 0-3 26.9 0 50.9-.1 69.9-.2 2.8-2.1 5.1-4 7.1-5.9 3.3 0 6.5 0 9.6-.1 17.9-16.1 7.8-18.2 7.8-18.2zm-319.1 43.3c3.6-1.5 7.1-3 10.6-4.5h43.4c.2 1.2.7 2.4 2 3.6.3.3.6.5 1 .8-18.7 0-37.9 0-57 .1zm53.4-15.6h-29.9c.1-1 .2-1.9.2-2.9v-1.1c9.8 0 19.8.1 29.8.1 0 1.3 0 2.6-.1 3.9z" class="shadow">
-            
-          </path>
-        </g>
-      </defs>
-    </svg>
-    <section class="section section-main text-center">
-      <svg viewBox="0 0 564.5 282.3" class="main-image">
-        <use xlink:href="#main-image"></use>
-      </svg>
-      <svg viewBox="0 0 564.5 282.3" class="main-title">
-        <use xlink:href="assets/img/symbols.svg#eng-title"></use>
-      </svg>
-      <svg viewBox="0 0 564.5 282.3" class="subtitle">
-        <use xlink:href="assets/img/symbols.svg#eng-subtitle"></use>
-      </svg><a href="https://www.youtube.com/watch?v=HVI7zTp-zyE&amp;feature=youtu.be" class="btn-watch">Watch the teaser</a>
-      <h3>June 7<sup>th</sup> 2015<br>Cinema South Festival<br><span>Sderot, Israel</span></h3>
-      <hr>
-      <p class="staff">Screenplay &amp; Director<strong> Demian Tzatzkin</strong></p>
-      <p class="staff">Producer<strong> Dana Naftaly</strong></p>
-      <p class="staff">Assistant Director<strong>  Amit Yogev</strong></p>
-      <p class="staff">Director of Photography<strong> Tal Raz</strong></p>
-      <p class="staff">Editor<strong> Noga Gila</strong></p>
-      <p class="staff">Lighting<strong> Yuval Lester</strong></p>
-      <p class="staff">Sound Recorder<strong> Nir Aviam</strong></p>
-      <p class="staff">Sound Editor<strong> Adi Arel</strong></p>
-      <p class="staff">Music<strong> Moshe Silver</strong></p>
-      <p class="staff">Online<strong> Amir Jorji</strong></p>
-      <p class="staff">Set Design<strong> Chen Yege</strong></p>
-    </section>
-    <section class="section section-light text-center"><img src="assets/img/logo-footer-1.svg" class="footer-logo"><img src="assets/img/logo-footer-2.svg" class="footer-logo"><img src="assets/img/logo-footer-3.svg" class="footer-logo"><img src="assets/img/logo-footer-4.svg" class="footer-logo small"></section>
-    <section class="section section-dark text-center"><a href="mailto:demian@tzatzk.in" class="links"><img src="assets/img/icon-email.svg" class="footer-icons"></a><a href="https://www.facebook.com/underthetreefilm?ref=hl" class="links"><img src="assets/img/icon-facebook.svg" class="footer-icons small"></a></section>
-    <script></script>
+    <section class="section section-dark text-center">
+      <h3 style="position: fixed; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); font-weight:100;">demiantz.com </h3>
+      <p>
+        <a style="color:#fff0dd; text-decoration: none; font-size: 12px; position: fixed; bottom: 30px; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%);" href="http://demiantz.com/underthetree/">Under the tree</a>
+      </p>
   </body>
 </html>
