--- a/underthetree/index.html
+++ b/underthetree/index.html
@@ -53,6 +53,14 @@
     <section class="section section-dark text-center"><a href="mailto:demian@tzatzk.in" class="links"><img src="assets/img/icon-email.svg" class="footer-icons"></a><a href="https://www.facebook.com/underthetreefilm?ref=hl" class="links"><img src="assets/img/icon-facebook.svg" class="footer-icons small"></a></section>
     <script type="text/javascript" src="assets/js/pe-scrollchange.min.js"></script>
     <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      
+      ga('create', 'UA-55167683-2', 'auto');
+      ga('send', 'pageview');
+      
       var watch = document.querySelector('.btn-watch');
       var videoCont = document.querySelector('.video-container');
       var closeVideo = document.querySelector('.close-btn');
