--- a/underthetree/index.html
+++ b/underthetree/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta property="og:image" content="http://demiantz.com/underthetree/assets/img/underthetree.jpg">
+    <meta property="og:title" content="Under the tree">
+    <meta property="og:description" content="a film by Demian Tzatzkin">
     <title>Under the tree :: a film by Demian Tzatzkin</title>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="stylesheet" href="assets/css/style.min.css">
